--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,7 @@
       "singleQuote": true,
       "trailingComma": "all",
       "arrowParens": "always",
-      "semi": false,
+      "semi": true,
       "endOfLine": "auto"
     }],
     "react/react-in-jsx-scope": "off",
